<resources>
    <plurals name="moviesInLibrary">
        <item quantity="one">movie</item>
        <item quantity="other">movies</item>
    </plurals>
    <plurals name="collectionsInLibrary">
        <item quantity="one">collection</item>
        <item quantity="other">collections</item>
    </plurals>
    <plurals name="showsInLibrary">
        <item quantity="one">show</item>
        <item quantity="other">shows</item>
    </plurals>
    <string name="episodes">Episodes</string>
    <plurals name="day">
        <item quantity="one">day</item>
        <item quantity="other">days</item>
    </plurals>
    <plurals name="hour">
        <item quantity="one">hour</item>
        <item quantity="other">hours</item>
    </plurals>
    <plurals name="hour_short">
        <item quantity="one">hr</item>
        <item quantity="other">hrs</item>
    </plurals>
    <plurals name="minute">
        <item quantity="one">minute</item>
        <item quantity="other">minutes</item>
    </plurals>
    <plurals name="minute_short">
        <item quantity="one">min</item>
        <item quantity="other">mins</item>
    </plurals>
    <plurals name="seasons_selected">
        <item quantity="one">season selected</item>
        <item quantity="other">seasons selected</item>
    </plurals>
    <plurals name="episodes_selected">
        <item quantity="one">episode selected</item>
        <item quantity="other">episodes selected</item>
    </plurals>
    <plurals name="file_location">
        <item quantity="one">File location</item>
        <item quantity="other">File locations</item>
    </plurals>
    <string name="content_description_image_backdrop">Background image</string>
    <string name="content_description_cover_image">Cover image</string>
    <string name="content_description_no_content_icon">No content icon</string>
    <string name="app_name">Mizuu</string>
    <string name="app_name_movies">Mizuu - movies</string>
    <string name="app_name_tvshows">Mizuu - TV shows</string>
    <string name="settings_name">Settings</string>
    <string name="newuser_btStartSearch">Start update</string>
    <string name="detailsReleaseDate">Release date</string>
    <string name="detailsGenre">Genres (comma-separated)</string>
    <string name="detailsRunTime">Runtime</string>
    <string name="detailsRating">Rating</string>
    <string name="detailsCertification">Certification</string>
    <string name="noInternet">No active Internet connection</string>
    <string name="errorOccured">An error occurred</string>
    <string name="updatingMovieInfo">Updating movie information…</string>
    <string name="updatingEpisodeInfo">Updating episode information…</string>
    <string name="updatingShowInfo">Updating show information…</string>
    <string name="stringNA">N/A</string>
    <string name="minutes">minutes</string>
    <string name="removeMovie">Remove movie</string>
    <string name="removeEpisode">Remove episode</string>
    <string name="removeShow">Remove TV show</string>
    <string name="failedToRemoveMovie">Could not remove movie!</string>
    <string name="failedToRemoveShow">Could not remove show!</string>
    <string name="failedToRemoveEpisode">Could not remove episode!</string>
    <string name="identifyMovieTitle">Identify movie</string>
    <string name="identifyEpisodeTitle">Identify episode</string>
    <string name="identifyShow">Identify show</string>
    <string name="prefsIdentification">Identification</string>
    <string name="stringSort">Sort</string>
    <string name="prefsSearchNavTitle">Search</string>
    <string name="prefsUI">User Interface</string>
    <string name="prefsUIGeneral">General</string>
    <string name="prefsAppFeedback">Application feedback</string>
    <string name="prefsAppFeedbackDescription">Tell the world what you think of Mizuu on Google Play.</string>
    <string name="prefsIdentificationAndSearch">Identification &amp; search</string>
    <string name="shareWith">Share with…</string>
    <string name="addedToFavs">Added to favorites!</string>
    <string name="removedFromFavs">Removed from favorites!</string>
    <string name="addedToWatchList">Added to Watchlist!</string>
    <string name="removedFromWatchList">Removed from Watchlist!</string>
    <string name="unknownYear">(unknown)</string>
    <string name="addingCover">Downloading new cover art…</string>
    <string name="coverSearchFailed">Cover art search failed!</string>
    <string name="updateCheckBox">Clear library on update</string>
    <string name="stringSearch">Search</string>
    <string name="stringNoPlot">Plot not available.</string>
    <string name="txtSelectFileSources">Select file sources</string>
    <string name="menuFavouriteTitle">Add favorite</string>
    <string name="menuFavouriteTitleRemove">Remove favorite</string>
    <string name="menuShareTitle">Share</string>
    <string name="menuRemoveTitle">Remove</string>
    <string name="menuUpdateTitle">Update library</string>
    <string name="menuAboutContact">Contact developer</string>
    <string name="noParentFolder">No parent folder!</string>
    <string name="prefsFileSourcesDescription">Configure the file sources to include in library updates.</string>
    <string name="mainUpdateBt">Update movie library</string>
    <string name="prefsUseLocalDataTitle">Prefer localized video info</string>
    <string name="prefsUseLocalDataDescription">Look for movie and TV show data in the current system language. Defaults to English if no data is available.</string>
    <string name="chooserMovies">Movies</string>
    <string name="chooserTVShows">TV shows</string>
    <string name="fileSources">File sources</string>
    <string name="prefsShowGridTitlesTitle">Show titles in overview</string>
    <string name="prefsShowGridTitles">Enable movie and show titles in library overview.</string>
    <string name="enableRootAccess">Request root access</string>
    <string name="enableRootAccessDescription">Request root access at launch, can be useful for some third party applications.</string>
    <string name="detailsTrailer">Trailer</string>
    <string name="prefsSubfolderSearchTitle">Enable sub-folder search</string>
    <string name="prefsSubfolderSearch">Include sub-folders in video file searches.</string>
    <string name="sortTitle">Sort by title</string>
    <string name="sortNewestEpisode">Sort by newest episode</string>
    <string name="sortRelease">Sort by release</string>
    <string name="sortFirstAired">Sort by first air date</string>
    <string name="sortRating">Sort by rating</string>
    <string name="sortWeightedRating">Sort by weighted rating</string>
    <string name="sortAdded">Sort by date added</string>
    <string name="sortDuration">Sort by duration</string>
    <string name="choiceGenres">Genres</string>
    <string name="stringMarkAsWatched">Mark as watched</string>
    <string name="stringEditMovie">Edit movie</string>
    <string name="stringEditTvShowEpisode">Edit TV show episode</string>
    <string name="stringLaunchScreen">Launch screen</string>
    <string name="stringLaunchScreenDescription">Select which section to show at launch.</string>
    <string name="other">Other</string>
    <string name="ignorenfotitle">Ignore custom movie data files</string>
    <string name="ignorenfo">Disable reading of local .nfo files and custom image art.</string>
    <string name="ignoreMoviePrefixes">Ignore title prefixes</string>
    <string name="ignoreMoviePrefixesDescription">Ignore prefixes like "A" and "The".</string>
    <string name="browseMedia">Browse artwork</string>
    <string name="advanced">Advanced</string>
    <string name="network">Network shares</string>
    <string name="bufferSize">Stream buffer size</string>
    <string name="bufferSizeDescription">Set the buffer size of the video streaming service.</string>
    <string name="_16kb">16 KB</string>
    <string name="video">Video</string>
    <string name="ignoreFileType">Ignore file format when playing videos</string>
    <string name="ignoreFileTypeDescription">Disable MIME type specific video Intents and use a generic wildcard.</string>
    <string name="disableEthernetWiFiCheck">Disable Ethernet / Wi-Fi check</string>
    <string name="disableEthernetWiFiCheckDescription">Don\'t check for an Ethernet or Wi-Fi connection before connecting to a network share.</string>
    <string name="openInBrowser">Open in browser</string>
    <string name="automaticallyRemoveMoviesFromWatchlist">Automatically remove movies from watchlist</string>
    <string name="automaticallyRemoveMoviesFromWatchlistDescription">Remove movies on the watchlist when marking as watched.</string>
    <string name="confirmBackPressTitle">Confirm back press before exiting</string>
    <string name="confirmBackPressDescription">Require two presses of the Back-button to exit.</string>
    <string name="ignoredFilenameTagsTitle">Ignored filename tags</string>
    <string name="ignoreFilenameTagsDescription">Set up personalized filename tags to ignore when identifying movies and TV shows.</string>
    <string name="ignoredFilesTitle">Ignored files</string>
    <string name="ignoredFilesDescription">Set up previously removed files to ignore when updating the library.</string>
    <string name="includePreviouslyRemovedFilesTitle">Ignore previously removed files</string>
    <string name="includePreviouslyRemovedFiles">Don\'t include removed files in library updates.</string>
    <string name="watchLater">Watch later</string>
    <string name="ignoreSmallFilesDescription">Ignore video files smaller than the set file size.</string>
    <string name="smallFilesOption_2">50 MB</string>
    <string name="setFileSizeLimit">Set file size limit</string>
    <string name="unidentifiedFiles">Unidentified files</string>
    <string name="forceEnglishApplicationLanguage">Force English application language</string>
    <string name="useEnglishLanguage">Use English language instead of the system language. Requires application restart.</string>
    <string name="listView">List view</string>
    <string name="filters">Filters</string>
    <string name="social">Social</string>
    <string name="folders">Folders</string>
    <string name="scheduledUpdates">Scheduled updates</string>
    <string name="IMDb">Open in IMDb</string>
    <string name="TMDb">Open in TMDb</string>
    <string name="includeAdultContent">Include adult content</string>
    <string name="includeAdultContentDescription">Include adult titles when searching for movies.</string>
    <string name="tvShowEpisodesOrderType">TV show episodes order type</string>
    <string name="tvShowEpisodesOrderTypeDescription">Show newest or oldest episodes first.</string>
    <string name="oldestFirst">Oldest first</string>
    <string name="ratings_option_2">Trakt.tv</string>
    <string name="selectSourceForMovieRatings">Select source for movie ratings</string>
    <string name="selectSourceForShowRatings">Select source for TV show ratings</string>
    <string name="sourceForMovieRatings">Source for movie ratings</string>
    <string name="dataSourceOfMovieRatings">Set the data source of movie ratings. Defaults to TMDb if the selected source is unavailable.</string>
    <string name="sourceForShowRatings">Source for TV show ratings</string>
    <string name="dataSourceOfShowRatings">Set the data source of TV show ratings. Defaults to TheTVDb if the selected source is unavailable.</string>
    <string name="showDetails">TV show details page</string>
    <string name="tv_shows_start_page_title">TV shows initial page</string>
    <string name="tv_shows_start_page_description">Show details or episodes first when viewing a TV show.</string>
    <string name="fullscreenMode">Full screen mode</string>
    <string name="fullscreenModeDescription">Force the application to be in full screen mode. Requires application restart.</string>
    <string name="watchOffline">Watch offline</string>
    <string name="playVideo">Play video</string>
</resources>