<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/play_video"
        android:icon="@drawable/ic_action_playback_play"
        android:showAsAction="always"
        android:title="@string/playVideo">
    </item>
    <item
        android:id="@+id/movie_fav"
        android:icon="@drawable/fav"
        android:title="@string/menuFavouriteTitleRemove">
    </item>
    <item
        android:id="@+id/share"
        android:icon="@drawable/share"
        android:title="@string/menuShareTitle"/>
    <item
        android:id="@+id/watch_list"
        android:icon="@drawable/watchlist_add"
        android:title="@string/watchLater">
    </item>
    <item
        android:id="@+id/trailer"
        android:icon="@drawable/youtube"
        android:title="@string/detailsTrailer">
    </item>
    <item
        android:id="@+id/watched"
        android:icon="@drawable/ic_action_show"
        android:title="@string/stringMarkAsWatched">
    </item>
    <item
        android:id="@+id/identify"
        android:icon="@drawable/search"
        android:title="@string/identifyMovieTitle">
    </item>
    <item
        android:id="@+id/editMovie"
        android:icon="@drawable/ic_action_edit"
        android:title="@string/stringEditMovie">
    </item>
    <item
        android:id="@+id/change_cover"
        android:enabled="true"
        android:icon="@drawable/backdrops"
        android:title="@string/browseMedia">
    </item>
    <item
        android:id="@+id/watchOffline"
        android:icon="@drawable/ic_action_download"
        android:title="@string/watchOffline"
        android:visible="false">
    </item>
    <item android:title="@string/openInBrowser">
        <menu>
            <item
                android:id="@+id/imdb"
                android:title="@string/IMDb"/>
            <item
                android:id="@+id/tmdb"
                android:title="@string/TMDb"/>
        </menu>
    </item>
    <item
        android:id="@+id/delete_movie"
        android:enabled="true"
        android:icon="@drawable/delete"
        android:title="@string/menuRemoveTitle">
    </item>

</menu>