<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/prefsUIGeneral" >
        <CheckBoxPreference
            android:defaultValue="false"
            android:icon="@drawable/titles"
            android:key="prefsShowGridTitles"
            android:summary="@string/prefsShowGridTitles"
            android:title="@string/prefsShowGridTitlesTitle" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:icon="@drawable/titles"
            android:key="prefsIgnorePrefixesInTitles"
            android:summary="@string/ignoreMoviePrefixesDescription"
            android:title="@string/ignoreMoviePrefixes" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:icon="@drawable/backdrops"
            android:key="prefsLoadImagesWhileScrolling"
            android:summary="@string/loadImagesWhileScrollingDescription"
            android:title="@string/loadImagesWhileScrolling" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:icon="@drawable/ic_action_expand"
            android:key="prefsFullscreen"
            android:summary="@string/fullscreenModeDescription"
            android:title="@string/fullscreenMode" />
    </PreferenceCategory>
    <PreferenceCategory
        android:enabled="@bool/isNotGoogleTV"
        android:title="@string/chooserTVShows" >
        <ListPreference
            android:defaultValue="@string/listView"
            android:entries="@array/seasonsLayout"
            android:entryValues="@array/seasonsLayout"
            android:icon="@drawable/startup"
            android:key="prefsSeasonsLayout"
            android:summary="@string/setSeasonsLayoutDescription"
            android:title="@string/setSeasonsLayout" />
        <ListPreference
            android:defaultValue="@string/oldestFirst"
            android:dialogTitle="@string/tvShowEpisodesOrderType"
            android:entries="@array/episodesOrder"
            android:entryValues="@array/episodesOrder"
            android:icon="@drawable/sort"
            android:key="prefsEpisodesOrder"
            android:summary="@string/tvShowEpisodesOrderTypeDescription"
            android:title="@string/tvShowEpisodesOrderType" />
        <ListPreference
            android:defaultValue="@string/showDetails"
            android:dialogTitle="@string/tv_shows_start_page_title"
            android:entries="@array/tv_shows_start_page"
            android:entryValues="@array/tv_shows_start_page"
            android:icon="@drawable/ic_action_settings"
            android:key="prefsTvShowsStartPage"
            android:summary="@string/tv_shows_start_page_description"
            android:title="@string/tv_shows_start_page_title" />
    </PreferenceCategory>

</PreferenceScreen>