<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:icon="@drawable/overview" >

    <PreferenceCategory android:title="@string/prefsUIGeneral" >
        <ListPreference
            android:defaultValue="1"
            android:entries="@array/startup_screen"
            android:entryValues="@array/startup_screen_codes"
            android:icon="@drawable/startup"
            android:key="prefsStartup"
            android:summary="@string/stringLaunchScreenDescription"
            android:title="@string/stringLaunchScreen" />

        <CheckBoxPreference
            android:icon="@drawable/ic_action_globe"
            android:key="prefsUseEnglishLanguage"
            android:summary="@string/useEnglishLanguage"
            android:title="@string/forceEnglishApplicationLanguage" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/chooserMovies" >
        <CheckBoxPreference
            android:defaultValue="true"
            android:icon="@drawable/watchlist_add"
            android:key="prefsRemoveMoviesFromWatchlist"
            android:summary="@string/automaticallyRemoveMoviesFromWatchlistDescription"
            android:title="@string/automaticallyRemoveMoviesFromWatchlist" />
    </PreferenceCategory>

</PreferenceScreen>