<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/play_video"
        android:icon="@drawable/ic_action_playback_play"
        android:showAsAction="always"
        android:title="@string/playVideo">
    </item>
    <item
        android:id="@+id/watched"
        android:showAsAction="never"
        android:title="@string/stringMarkAsWatched"/>
    <item
        android:id="@+id/identify"
        android:icon="@drawable/search"
        android:showAsAction="never"
        android:title="@string/identifyEpisodeTitle"/>
    <item
        android:id="@+id/editTvShowEpisode"
        android:icon="@drawable/ic_action_edit"
        android:showAsAction="never"
        android:title="@string/stringEditTvShowEpisode">
    </item>
    <item
        android:id="@+id/watchOffline"
        android:icon="@drawable/ic_action_download"
        android:title="@string/watchOffline"
        android:visible="false">
    </item>
    <item
        android:id="@+id/menuDeleteEpisode"
        android:icon="@drawable/delete"
        android:showAsAction="never"
        android:title="@string/removeEpisode"/>

</menu>